<resources>

    <string name="app_name" translatable="false">IQOS Map</string>
    <string name="google_map_api_key" translatable="false">AIzaSyDikFCYqUmaRV7A7fr1zjuf_jNiDWxsdeQ</string>
    <string name="google_ads_id" translatable="false">ca-app-pub-2137393606695859~3978245676</string>
    <string name="google_ads_banner_id" translatable="false">ca-app-pub-2137393606695859/6412837326</string>
    <string name="google_ads_banner_test_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="filter_sticks_title">Sticks</string>
    <string name="filter_sticks_descriptions">Point selling sticks</string>

    <string name="filter_devices_title">Devices</string>
    <string name="filter_devices_descriptions">Places where you can buy IQOS devices</string>

    <string name="filter_accessories_title">Accessories</string>
    <string name="filter_accessories_descriptions">Customization, chargers</string>

    <string name="filter_service_title">Service</string>
    <string name="filter_service_descriptions">Repair, maintenance, replacement</string>

    <string name="filter_friendly_title">Friendly</string>
    <string name="filter_friendly_descriptions">Friendly places</string>

    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>

    <string name="error_internet_connection">No internet connection</string>

    <string name="repeat">Repeat</string>
    <string name="address_format">Address: %s</string>
    <string name="phone_format">Phone: %s</string>
    <string name="schedulers_format">Working hours: %s</string>

    <string name="attention">Attention</string>
    <string name="new_version_is_available">A new version is available</string>

</resources>
